# PrimeNumbers

./: .gitignore  CMakeLists.txt  SquareRoot.c  main.c
