cmake_minimum_required(VERSION 3.10)
project(PrimeNumbers C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_FLAGS "-Wall -pedantic -Wextra -fopenmp")
FIND_PACKAGE( OpenMP)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
include_directories(SYSTEM ${OpenMP_INCLUDE_PATH})
add_executable(PrimeNumbers main.c SquareRoot.c BinarySearch.c)
TARGET_LINK_LIBRARIES(PrimeNumbers  ${OpenMP_CXX_LIBRARIES} ${PROJECT_LINK_LIBS})
